# SHERPA

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in  git.make  index.html  params.json  svn.make
AHADIC++/Decays/: Cluster_Decay_Analysis.C  Cluster_Decay_Analysis.H  Cluster_Decay_Handler.C  Cluster_Decay_Handler.H  Cluster_Part.C  Cluster_Part.H  Git_Info.C  Makefile.am  Makefile.in  SVN_Info.C
AHADIC++/Formation/: Cluster_Formation_Handler.C  Cluster_Formation_Handler.H  Cluster_Former.C  Cluster_Former.H  Colour_Reconnections.C  Colour_Reconnections.H  Git_Info.C  Gluon_Decayer.C  Gluon_Decayer.H  Makefile.am  Makefile.in  SVN_Info.C
AHADIC++/Tools/: Cluster.C  Cluster.H  Cluster_Splitter.C  Cluster_Splitter.H  Constituents.C  Constituents.H  Dipole.C  Dipole.H  Git_Info.C  Gluon_Splitter.C  Gluon_Splitter.H  Hadron_Init.C  Hadron_Init.H  Hadron_Multiplet.C  Hadron_Multiplet.H  Hadron_Wave_Function.C  Hadron_Wave_Function.H  Hadronisation_Parameters.C  Hadronisation_Parameters.H  Makefile.am  Makefile.in  Proto_Particle.C  Proto_Particle.H  SVN_Info.C  Soft_Cluster_Handler.C  Soft_Cluster_Handler.H  Splitter_Base.C  Splitter_Base.H  Transitions.C  Transitions.H
AMEGIC++/Amplitude/: Amplitude_Base.C  Amplitude_Base.H  Amplitude_Generator.C  Amplitude_Generator.H  Amplitude_Group.C  Amplitude_Group.H  Amplitude_Handler.C  Amplitude_Handler.H  Amplitude_Manipulator.C  Amplitude_Manipulator.H  Amplitude_Output.C  Amplitude_Output.H  CFColor.C  CFColor.H  Color_Generator.C  Color_Generator.H  Color_Group.H  FullAmplitude_External.C  FullAmplitude_External.H  FullAmplitude_MHV_Base.C  FullAmplitude_MHV_Base.H  Git_Info.C  Lorentz_Function.C  Lorentz_Function.H  Lorentz_Functions.C  Makefile.am  Makefile.in  Pfunc.H  Prop_Generator.C  Prop_Generator.H  SVN_Info.C  Single_Amplitude.C  Single_Amplitude.H  Single_Amplitude_Base.C  Single_Amplitude_Base.H  Single_Vertex.C  Single_Vertex.H  Super_Amplitude.C  Super_Amplitude.H  Vertex.C  (+5 more)
AMEGIC++/DipoleSubtraction/: DipoleSplitting_Base.C  DipoleSplitting_Base.H  FF_DipoleSplitting.C  FF_DipoleSplitting.H  FI_DipoleSplitting.C  FI_DipoleSplitting.H  Git_Info.C  IF_DipoleSplitting.C  IF_DipoleSplitting.H  II_DipoleSplitting.C  II_DipoleSplitting.H  Makefile.am  Makefile.in  SVN_Info.C  Single_DipoleTerm.C  Single_DipoleTerm.H  Single_LOProcess.C  Single_LOProcess.H  Single_LOProcess_External.C  Single_LOProcess_External.H  Single_LOProcess_MHV.C  Single_LOProcess_MHV.H  Single_OSTerm.C  Single_OSTerm.H  Single_Real_Correction.C  Single_Real_Correction.H  Single_Virtual_Correction.C  Single_Virtual_Correction.H
AMEGIC++/Main/: Amegic.C  Amegic_Base.C  Amegic_Base.H  ColorSC.C  ColorSC.H  Git_Info.C  Helicity.C  Helicity.H  Makefile.am  Makefile.in  Point.C  Point.H  Pol_Info.C  Pol_Info.H  Polarisation.C  Polarisation.H  Process_Base.C  Process_Base.H  Process_Group.C  Process_Group.H  Process_Tags.C  Process_Tags.H  SVN_Info.C  Single_Process.C  Single_Process.H  Single_Process_Combined.C  Single_Process_Combined.H  Single_Process_External.C  Single_Process_External.H  Single_Process_MHV.C  Single_Process_MHV.H  Tools.H  Topology.C  Topology.H  make2scons  make2scons.in  makelibs  makelibs.in
AMEGIC++/Phasespace/: Channel_Generator.C  Channel_Generator.H  Channel_Generator3V.C  Channel_Generator3V.H  Channel_Generator3_NPV.C  Channel_Generator3_NPV.H  Channel_Generator_Base.C  Channel_Generator_Base.H  Channel_Generator_Decays.C  Channel_Generator_Decays.H  Channel_Generator_KK.C  Channel_Generator_KK.H  Channel_Generator_NPV.C  Channel_Generator_NPV.H  Channel_Generator_UniV.C  Channel_Generator_UniV.H  Git_Info.C  Makefile.am  Makefile.in  Phase_Space_Generator.C  Phase_Space_Generator.H  SVN_Info.C
AMEGIC++/String/: Git_Info.C  Makefile.am  Makefile.in  MyString.C  MyString.H  SVN_Info.C  String_Generator.C  String_Generator.H  String_Handler.C  String_Handler.H  String_Library.C  String_Library.H  String_Output.C  String_Output.H  String_Tree.C  String_Tree.H  Values.H
AMISIC++/Model/: Git_Info.C  Grid_Creator.C  Grid_Creator.H  Makefile.am  Makefile.in  Profile_Function.C  Profile_Function.H  Profile_Function_Base.C  Profile_Function_Base.H  Reggeon_Trajectory.C  Reggeon_Trajectory.H  SVN_Info.C  Simple_Chain.C  Simple_Chain.H  Simple_String.C  Simple_String.H
AMISIC++/Tools/: Amisic_Histogram.C  Amisic_Histogram.H  Fixed_Variable_Channel.C  Fixed_Variable_Channel.H  Git_Info.C  MPI_KFactor_Setter.C  MPI_KFactor_Setter.H  MPI_Scale_Setter.C  Makefile.am  Makefile.in  SVN_Info.C  Semihard_QCD.C  Semihard_QCD.H
ATOOLS/Org/: CXXFLAGS.H.in  CXXFLAGS_PACKAGES.H.in  Data_Reader.C  Data_Reader.H  Data_Writer.C  Data_Writer.H  Exception.C  Exception.H  Exception_Handler.C  Exception_Handler.H  File_IO_Base.C  File_IO_Base.H  Getter_Function.C  Getter_Function.H  Git_Info.C  Git_Info.H  Gzip_Stream.C  Gzip_Stream.H  IO_Handler.C  IO_Handler.H  Info_Key.C  Info_Key.H  Info_Key.inl.H  Integration_Info.C  Integration_Info.H  Integration_Info.inl.H  Library_Loader.C  Library_Loader.H  Makefile.am  Makefile.in  Message.C  Message.H  MyStrStream.C  MyStrStream.H  MyTiming.C  MyTiming.H  My_File.C  My_File.H  My_Limits.H  My_MPI.C  (+22 more)
AddOns/BlackHat/: BlackHat_Interface.C  BlackHat_Tree.C  BlackHat_Tree.H  BlackHat_Virtual.C  BlackHat_Virtual.H  Makefile.am  Makefile.in
AddOns/Delphes/: Makefile.am  Makefile.in  Output_Delphes.C
AddOns/HZTool/: HZTool_Interface.C  HZTool_Wrapper.H  Makefile.am  Makefile.in  hznorm.F  hztool_sherpa.F
AddOns/HepMC/: Makefile.am  Makefile.in  Output_HepMC2_Genevent.C  Output_HepMC2_Genevent.H  Output_HepMC2_Short.C  Output_HepMC2_Short.H  Output_HepMC3_Genevent.C  Output_HepMC3_Genevent.H
AddOns/Higgs/: A_cont.C  A_cont.h  A_higgs.C  A_higgs.h  A_spin2.C  A_spin2.h  Acont.C  Acont.h  Ahiggs.C  Ahiggs.h  Higgs_Interface.C  Higgs_Selector.C  Higgs_Tree.C  Higgs_Tree.H  Higgs_Virtual.C  Higgs_Virtual.H  Makefile.am  Makefile.in  Wrappers.C  Wrappers.H  dilog.C  dilog.h  gggamgam1l.C  gggg.C  (+6 more)
Examples/: Makefile.am  Makefile.in
(+1812 files in other folders)
