examplesdir        = $(pkgdatadir)/Examples

nobase_dist_examples_DATA         =	\
		API/ME2-Python/Run.dat \
		API/ME2-Python/test.py.in \
		API/ME2-CPP/Run.dat \
		API/ME2-CPP/test.cpp \
		API/ME2-CPP/Makefile \
		API/Events/Run.dat \
		API/Events/test.py.in \
		API/MPIEvents/Run.dat \
		API/MPIEvents/test.py.in \
                BFactory/BDecay/Run.dat \
                BFactory/Belle_QCDBackground/Run.dat \
                BFactory/Belle_Signal/Run.dat \
		Models/SM_ZPrime/Interaction_Model_SM_Zprime.C \
		Models/SM_ZPrime/SM_Zprime.C \
		Models/SM_ZPrime/Run.dat \
		Models/SM_ZPrime/Makefile \
		FixedOrder_NLO/NTuples/Run.B-like.dat \
		FixedOrder_NLO/NTuples/Reweight.B-like.dat \
		FixedOrder_NLO/NTuples/Run.R-like.dat \
		FixedOrder_NLO/NTuples/Reweight.R-like.dat \
		V_plus_Jets/LHC_WJets/Run.dat \
		V_plus_Jets/LHC_WJets/My_JetCriterion.C \
		V_plus_Jets/LHC_WJets/SConstruct \
		V_plus_Jets/LHC_ZJets/Run.dat \
		V_plus_Bs/LHC_Wbb/Wbb_Virtual.f \
		V_plus_Bs/LHC_Wbb/Wbb_Interface.C \
		V_plus_Bs/LHC_Wbb/SConstruct \
		V_plus_Bs/LHC_Wbb/Run.dat \
		V_plus_Bs/LHC_Wbb/Analysis.dat \
		V_plus_Bs/LHC_Zbb/Run.dat \
		Jets_at_HadronColliders/LHC_Jets_MCatNLO/Run.dat \
		Jets_at_HadronColliders/LHC_Jets_MEPS/Run.dat \
		Jets_at_LeptonColliders/LEP_Jets/Run.dat \
		Jets_at_LeptonColliders/LEP_Jets/Run.NLO.dat \
		Jets_in_DIS/HERA/Run.dat \
		H_in_GluonFusion/LHC_HInterference/Run.dat \
		H_in_GluonFusion/LHC_HJets/Run.dat \
		H_in_GluonFusion/LHC_HJets/Results/Decays/h0 \
		H_in_TTBar/LHC_TTH_MCatNLO/lib.f \
		H_in_TTBar/LHC_TTH_MCatNLO/intlib.f \
		H_in_TTBar/LHC_TTH_MCatNLO/libqq.f \
		H_in_TTBar/LHC_TTH_MCatNLO/libglu.f \
		H_in_TTBar/LHC_TTH_MCatNLO/matri.f \
		H_in_TTBar/LHC_TTH_MCatNLO/boxlib.f \
		H_in_TTBar/LHC_TTH_MCatNLO/boxlib_qq.f \
		H_in_TTBar/LHC_TTH_MCatNLO/penta_qq.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p1new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p2new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p3new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p4new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p5new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p6new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/TTH_Virtual.f \
		H_in_TTBar/LHC_TTH_MCatNLO/TTH_Interface.C \
		H_in_TTBar/LHC_TTH_MCatNLO/SConstruct \
		H_in_TTBar/LHC_TTH_MCatNLO/Run.dat \
		Tops_plus_Jets/LHC_Tops/Run.dat \
		Tops_plus_V/LHC_TTW/Run.dat

