examplesdir        = $(pkgdatadir)/Examples

nobase_dist_examples_DATA         =	\
		API/ME2-Python/Run.dat \
		API/ME2-Python/test.py.in \
		API/ME2-CPP/Run.dat \
		API/ME2-CPP/test.cpp \
		API/ME2-CPP/SConstruct \
		API/Events/Run.dat \
		API/Events/test.py.in \
		API/MPIEvents/Run.dat \
		API/MPIEvents/test.py.in \
                BFactory/BDecay/Run.dat \
                BFactory/Belle_QCDBackground/Run.dat \
                BFactory/Belle_Signal/Run.dat \
		FixedOrder_NLO/NTuples/Run.B-like.dat \
		FixedOrder_NLO/NTuples/Reweight.B-like.dat \
		FixedOrder_NLO/NTuples/Run.R-like.dat \
		FixedOrder_NLO/NTuples/Reweight.R-like.dat \
		Jets_at_HadronColliders/LHC_Jets_MCatNLO/Run.dat \
		V_plus_Jets/LHC_WJets/Run.dat \
		V_plus_Jets/LHC_WJets/My_JetCriterion.C \
		V_plus_Jets/LHC_WJets/SConstruct \
		V_plus_Jets/LHC_ZJets/Run.dat \
		V_plus_Bs/LHC_Wbb/Wbb_Virtual.f \
		V_plus_Bs/LHC_Wbb/Wbb_Interface.C \
		V_plus_Bs/LHC_Wbb/SConstruct \
		V_plus_Bs/LHC_Wbb/Run.dat \
		V_plus_Bs/LHC_Wbb/Analysis.dat \
		V_plus_Bs/LHC_Zbb/Run.dat \
		VV_plus_Jets/LHC_2l2nuJets/Run.dat \
		VV_plus_Jets/LHC_2l2nuJets_GluonInitiated/Run.dat \
		VV_plus_Jets/LHC_4lJets/Run.dat \
		VV_plus_Jets/LHC_4lJets_GluonInitiated/Run.dat \
		VV_plus_Jets/LHC_WqqZnunuJets/Run.dat \
		VV_plus_Jets/LHC_2l2nu2jJets_SameSign/Run.dat \
		Jets_at_HadronColliders/LHC_Jets_MEPS/Run.dat \
		Jets_at_LeptonColliders/LEP_Jets/Run.dat \
		Jets_at_LeptonColliders/LEP_Jets/Run.NLO.dat \
		Jets_in_DIS/HERA/Run.dat \
		H_in_AssociatedProduction/LHC_WHJets/Run.dat \
                H_in_AssociatedProduction/LHC_ZHJets/Run.dat \
                H_in_AssociatedProduction/LHC_Hll_MCatNLO/Run.dat \
		H_in_GluonFusion/LHC_HInterference/Run.dat \
		H_in_GluonFusion/LHC_HJets/Run.dat \
		H_in_GluonFusion/LHC_HJets_Finite_MTop/Run.dat \
		H_in_TTBar/LHC_TTH_MCatNLO/lib.f \
		H_in_TTBar/LHC_TTH_MCatNLO/intlib.f \
		H_in_TTBar/LHC_TTH_MCatNLO/libqq.f \
		H_in_TTBar/LHC_TTH_MCatNLO/libglu.f \
		H_in_TTBar/LHC_TTH_MCatNLO/matri.f \
		H_in_TTBar/LHC_TTH_MCatNLO/boxlib.f \
		H_in_TTBar/LHC_TTH_MCatNLO/boxlib_qq.f \
		H_in_TTBar/LHC_TTH_MCatNLO/penta_qq.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p1new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p2new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p3new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p4new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p5new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/p6new.f \
		H_in_TTBar/LHC_TTH_MCatNLO/TTH_Virtual.f \
		H_in_TTBar/LHC_TTH_MCatNLO/TTH_Interface.C \
		H_in_TTBar/LHC_TTH_MCatNLO/SConstruct \
		H_in_TTBar/LHC_TTH_MCatNLO/Run.dat \
		Soft_QCD/Run.Xsecs.dat \
		Soft_QCD/LHC_MinBias/Run.7TeV.dat \
		Tops_plus_Jets/LHC_Tops/Run.dat \
		Tops_plus_Jets/LHC_Tops/Run.EWapprox.dat \
		Tops_plus_V/LHC_TTW/Run.dat \
		UFO_MSSM/MSSM/__init__.py \
		UFO_MSSM/MSSM/build_restrict.py \
		UFO_MSSM/MSSM/coupling_orders.py \
		UFO_MSSM/MSSM/couplings.py \
		UFO_MSSM/MSSM/function_library.py \
		UFO_MSSM/MSSM/lorentz.py \
		UFO_MSSM/MSSM/object_library.py \
		UFO_MSSM/MSSM/parameters.py \
		UFO_MSSM/MSSM/particles.py \
		UFO_MSSM/MSSM/vertices.py \
		UFO_MSSM/MSSM/write_param_card.py
