pkglib_LTLIBRARIES = libAhadicDecays.la

GITTAG = AHADIC++/Decays
include ../../git.make

libAhadicDecays_la_SOURCES = \
                             Git_Info.C \
			     Cluster_Decay_Handler.C \
                             Cluster_Decay_Analysis.C \
                             Cluster_Part.C 

localincdir = $(pkgincludedir)/AHADIC++/Decays

localinc_HEADERS   = \
		     Cluster_Decay_Handler.H \
                     Cluster_Decay_Analysis.H \
                     Cluster_Part.H 

