pkglib_LTLIBRARIES = libAhadicTools.la

SVNTAG = AHADIC++/Tools
include ../../svn.make

libAhadicTools_la_SOURCES = \
                            SVN_Info.C \
			    Proto_Particle.C \
			    Cluster.C \
                            Constituents.C \
                            Hadron_Wave_Function.C \
                            Hadron_Multiplet.C \
                            Transitions.C \
			    Splitter_Base.C \
			    Gluon_Splitter.C \
			    Cluster_Splitter.C \
			    Dipole.C \
			    Soft_Cluster_Handler.C \
			    Hadron_Init.C \
                            Hadronisation_Parameters.C

localincdir = $(pkgincludedir)/AHADIC++/Tools

localinc_HEADERS   = \
		     Cluster.H \
	  	     Proto_Particle.H \
                     Constituents.H \
		     Splitter_Base.H \
		     Gluon_Splitter.H \
		     Cluster_Splitter.H \
		     Dipole.H \
                     Hadron_Wave_Function.H \
                     Hadron_Multiplet.H \
                     Transitions.H \
		     Soft_Cluster_Handler.H \
		     Hadron_Init.H \
                     Hadronisation_Parameters.H

