pkglib_LTLIBRARIES = libDipoleSubtraction.la

SVNTAG = AMEGIC++/DipoleSubtraction
include ../../svn.make

libDipoleSubtraction_la_SOURCES = \
		       SVN_Info.C \
		       DipoleSplitting_Base.C \
		       FF_DipoleSplitting.C \
		       FI_DipoleSplitting.C \
		       IF_DipoleSplitting.C \
		       II_DipoleSplitting.C \
		       Single_LOProcess.C \
		       Single_LOProcess_MHV.C \
		       Single_LOProcess_External.C \
                       Single_DipoleTerm.C \
                       Single_OSTerm.C \
                       Single_Virtual_Correction.C \
		       Single_Real_Correction.C 

localinc_HEADERS   = \
		     DipoleSplitting_Base.H \
		     FF_DipoleSplitting.H \
		     FI_DipoleSplitting.H \
		     IF_DipoleSplitting.H \
		     II_DipoleSplitting.H \
		     Single_LOProcess.H \
		     Single_LOProcess_MHV.H \
		     Single_LOProcess_External.H \
                     Single_DipoleTerm.H \
                     Single_OSTerm.H \
                     Single_Virtual_Correction.H \
		     Single_Real_Correction.H 
