pkglib_LTLIBRARIES = libString.la

GITTAG = AMEGIC++/String
include ../../git.make

libString_la_SOURCES = Git_Info.C \
		       String_Handler.C String_Generator.C \
                       String_Tree.C String_Output.C \
	               MyString.C String_Library.C

localinc_HEADERS   = String_Handler.H String_Generator.H \
                 String_Tree.H String_Output.H \
	         MyString.H Values.H String_Library.H
