pkglib_LTLIBRARIES       = libAmisicModel.la

GITTAG = AMISIC++/Model
include ../../git.make

libAmisicModel_la_SOURCES     = \
			       	Git_Info.C \
				Grid_Creator.C \
				Profile_Function_Base.C \
				Profile_Function.C \
				Simple_Chain.C \
				Reggeon_Trajectory.C \
				Simple_String.C 

localinc_HEADERS          = \
			Grid_Creator.H \
			Profile_Function_Base.H \
			Profile_Function.H \
			Simple_Chain.H \
			Reggeon_Trajectory.H \
			Simple_String.H 
