pkglib_LTLIBRARIES       = libAmisicTools.la

SVNTAG = AMISIC++/Tools
include ../../svn.make

libAmisicTools_la_SOURCES     = \
				SVN_Info.C \
				Amisic_Histogram.C \
				Fixed_Variable_Channel.C \
				Semihard_QCD.C 

localinc_HEADERS          = \
			Amisic_Histogram.H \
			Fixed_Variable_Channel.H \
			Semihard_QCD.H 
