pkglib_LTLIBRARIES       = libAmisicTools.la

SVNTAG = AMISIC++/Tools
include ../../svn.make

libAmisicTools_la_SOURCES     = \
				SVN_Info.C \
				Amisic_Histogram.C \
				Fixed_Variable_Channel.C \
				MPI_Scale_Setter.C \
				MPI_KFactor_Setter.C \
				Semihard_QCD.C 

localinc_HEADERS          = \
			Amisic_Histogram.H \
			Fixed_Variable_Channel.H \
			MPI_KFactor_Setter.H \
			Semihard_QCD.H 
