pkglib_LTLIBRARIES       = libAmisicTools.la

GITTAG = AMISIC++/Tools
include ../../git.make

libAmisicTools_la_SOURCES     = \
				Git_Info.C \
				Amisic_Histogram.C \
				Fixed_Variable_Channel.C \
				MPI_Scale_Setter.C \
				MPI_KFactor_Setter.C \
				Semihard_QCD.C 

localinc_HEADERS          = \
			Amisic_Histogram.H \
			Fixed_Variable_Channel.H \
			MPI_KFactor_Setter.H \
			Semihard_QCD.H 
