pkglib_LTLIBRARIES = libBeam.la

GITTAG = BEAM/Main
include ../../git.make

libBeam_la_SOURCES    =	Git_Info.C \
			Beam_Base.C \
			Monochromatic.C \
			Laser_Backscattering.C \
			EPA.C \
			Spectrum_Reader.C \
			Beam_Spectra_Handler.C

localinc_HEADERS =	Beam_Base.H \
		 	Monochromatic.H \
			Laser_Backscattering.H \
			EPA.H \
		 	Spectrum_Reader.H \
			Beam_Spectra_Handler.H
