pkglib_LTLIBRARIES    =	libComixPhasespace.la

SVNTAG = COMIX/Phasespace
include ../../svn.make

libComixPhasespace_la_SOURCES =	\
				SVN_Info.C \
				PS_Info.C \
				PS_Vertex.C \
				PS_Current.C \
				PS_Generator.C \
				PS_Channel.C
localinc_HEADERS      =	\
			PS_Info.H \
			PS_Vertex.H \
			PS_Current.H \
			PS_Generator.H \
			PS_Channel.H
