pkglib_LTLIBRARIES = libCSShowers.la

GITTAG = CSSHOWER++/Showers
include ../../git.make

libCSShowers_la_SOURCES = \
	Git_Info.C \
	Splitting_Function_Base.C \
	Splitting_Function_Group.C \
	Sudakov.C \
	Shower.C \
	Kinematics_Base.C

localinc_HEADERS   = \
	Splitting_Function_Base.H \
	Splitting_Function_Group.H \
	Sudakov.H \
	Shower.H \
	Kinematics_Base.H
